@@ -20,3 +20,8 @@
 		
 		BUG: in crawler_control.c
 			occationsally, urls are added to linksfound(binary tree) when they are found multiple times. Likely a problem with either btree_find() or the urlinfo compare function.
+
+01/07/2014:	Mad changes in how crawler_control calls parse_all, and which file contains clean_links
+		- crawler_control now uses one call to parseall for seed links.
+			this returns a linked list of <a> tags and urls in alternating order
+		- clean_links puts urls into linkstofind if the corresponding <a> meets the criteria.
